[gd_scene load_steps=26 format=3 uid="uid://pi852642fy8e"]

[ext_resource type="Script" path="res://scripts/HUDElements/HUD.gd" id="1_jaeg1"]
[ext_resource type="Theme" uid="uid://bia5m7q7lf4el" path="res://theme/NotePanels.tres" id="2_iy3s7"]
[ext_resource type="Script" path="res://scripts/HUDElements/Selector.gd" id="3_2xkyr"]
[ext_resource type="Texture2D" uid="uid://derhk0nr7e4rj" path="res://sprites/sPin.png" id="3_5jkwq"]
[ext_resource type="Script" path="res://scripts/HUDElements/FPSCounter.gd" id="3_7s1mp"]
[ext_resource type="Script" path="res://scripts/HUDElements/AutosaveTimerLabel.gd" id="5_aflcu"]
[ext_resource type="Script" path="res://scripts/HUDElements/RMBMenu.gd" id="5_orq2i"]
[ext_resource type="Script" path="res://scripts/HUDElements/ColorPicker.gd" id="6_b3ab8"]
[ext_resource type="Script" path="res://scripts/HUDElements/LinkDrawer.gd" id="7_8123t"]
[ext_resource type="Script" path="res://scripts/HUDElements/ProjectNameTextBox.gd" id="7_utv7t"]
[ext_resource type="StyleBox" uid="uid://yewjlrpyduup" path="res://theme/OkButtonStyle.tres" id="10_wehai"]
[ext_resource type="StyleBox" uid="uid://db8jnt64sdrm2" path="res://theme/OkButtonHoverStyle.tres" id="11_2tmou"]
[ext_resource type="Shader" path="res://shaders/Bulge.gdshader" id="13_dsimq"]
[ext_resource type="Script" path="res://scripts/HUDElements/BookmarkList.gd" id="14_itixv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1v5q"]
bg_color = Color(0, 0, 0, 0.164706)

[sub_resource type="InputEventKey" id="InputEventKey_pmifv"]
command_or_control_autoremap = true
keycode = 78

[sub_resource type="Shortcut" id="Shortcut_m5ktq"]
events = [SubResource("InputEventKey_pmifv")]

[sub_resource type="InputEventKey" id="InputEventKey_apk2l"]
device = -1
command_or_control_autoremap = true
keycode = 83
unicode = 115

[sub_resource type="Shortcut" id="Shortcut_cptha"]
events = [SubResource("InputEventKey_apk2l")]

[sub_resource type="InputEventKey" id="InputEventKey_pfi0t"]
device = -1
command_or_control_autoremap = true
keycode = 79
unicode = 111

[sub_resource type="Shortcut" id="Shortcut_x01ce"]
events = [SubResource("InputEventKey_pfi0t")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bfjwi"]
bg_color = Color(0, 0, 0, 0.164706)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cqoso"]
bg_color = Color(0.0823529, 0.0901961, 0.0666667, 0.764706)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3fss0"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7cwot"]
shader = ExtResource("13_dsimq")
shader_parameter/enable_col_adjust = true
shader_parameter/enable_aberation = true

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jaeg1")

[node name="LinkDrawerStart" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("7_8123t")

[node name="LinkDrawer" type="Control" parent="."]
visible = false
top_level = true
layout_mode = 3
anchors_preset = 0

[node name="Selector" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("3_2xkyr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ButtonContainer" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 47.0
grow_horizontal = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m1v5q")

[node name="ButtonAdd" type="Button" parent="CanvasLayer/ButtonContainer"]
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 44.0
offset_bottom = 43.0
tooltip_text = "Create an empty note"
focus_neighbor_left = NodePath("../ButtonSettings")
focus_neighbor_right = NodePath("../ButtonSave")
focus_next = NodePath("../ButtonSave")
focus_previous = NodePath("../ButtonSettings")
theme = ExtResource("2_iy3s7")
theme_override_font_sizes/font_size = 22
shortcut = SubResource("Shortcut_m5ktq")
text = "‚ûï"

[node name="ButtonSave" type="Button" parent="CanvasLayer/ButtonContainer"]
layout_mode = 0
offset_left = 50.0
offset_top = 4.0
offset_right = 87.0
offset_bottom = 43.0
tooltip_text = "Save the project (<ProjectName>)"
focus_neighbor_left = NodePath("../ButtonAdd")
focus_neighbor_right = NodePath("../ButtonLoad")
focus_next = NodePath("../ButtonLoad")
focus_previous = NodePath("../ButtonAdd")
theme = ExtResource("2_iy3s7")
theme_override_font_sizes/font_size = 22
shortcut = SubResource("Shortcut_cptha")
text = "üíæ"

[node name="ButtonLoad" type="Button" parent="CanvasLayer/ButtonContainer"]
layout_mode = 0
offset_left = 93.0
offset_top = 4.0
offset_right = 130.0
offset_bottom = 43.0
tooltip_text = "Load a Project"
focus_neighbor_left = NodePath("../ButtonSave")
focus_neighbor_right = NodePath("../ButtonAddBookmark")
focus_next = NodePath("../ButtonAddBookmark")
focus_previous = NodePath("../ButtonSave")
theme = ExtResource("2_iy3s7")
theme_override_font_sizes/font_size = 22
shortcut = SubResource("Shortcut_x01ce")
text = "üìÅ"

[node name="ButtonAddBookmark" type="Button" parent="CanvasLayer/ButtonContainer"]
layout_mode = 0
offset_left = 136.0
offset_top = 4.0
offset_right = 173.0
offset_bottom = 43.0
tooltip_text = "Create Bookmark"
focus_neighbor_left = NodePath("../ButtonLoad")
focus_neighbor_right = NodePath("../ButtonReplace")
focus_next = NodePath("../ButtonReplace")
focus_previous = NodePath("../ButtonLoad")
theme = ExtResource("2_iy3s7")
theme_override_font_sizes/font_size = 22
shortcut = SubResource("Shortcut_x01ce")
text = "üè∑"

[node name="ButtonReplace" type="Button" parent="CanvasLayer/ButtonContainer"]
layout_mode = 0
offset_left = 181.0
offset_top = 4.0
offset_right = 219.0
offset_bottom = 43.0
tooltip_text = "Find and Replace"
focus_neighbor_left = NodePath("../ButtonAddBookmark")
focus_neighbor_right = NodePath("../ButtonSettings")
focus_next = NodePath("../ButtonSettings")
focus_previous = NodePath("../ButtonAddBookmark")
theme = ExtResource("2_iy3s7")
theme_override_font_sizes/font_size = 22
text = "üîç"

[node name="ButtonSettings" type="Button" parent="CanvasLayer/ButtonContainer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -43.0
offset_top = 4.0
offset_right = -5.0
offset_bottom = 43.0
grow_horizontal = 0
tooltip_text = "Settings"
focus_neighbor_left = NodePath("../ButtonReplace")
focus_neighbor_right = NodePath("../ButtonAdd")
focus_next = NodePath("../ButtonAdd")
focus_previous = NodePath("../ButtonReplace")
theme = ExtResource("2_iy3s7")
theme_override_font_sizes/font_size = 22
text = "‚öôÔ∏è"

[node name="FPSCounter" type="Label" parent="CanvasLayer/ButtonContainer"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -149.0
offset_top = 12.0
offset_right = -66.0
offset_bottom = 38.0
grow_horizontal = 0
text = "FPS: "
horizontal_alignment = 2
script = ExtResource("3_7s1mp")

[node name="TimerCounter" type="Label" parent="CanvasLayer/ButtonContainer"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -392.0
offset_top = 11.0
offset_right = -205.0
offset_bottom = 37.0
grow_horizontal = 0
text = "Seconds until autosave: "
horizontal_alignment = 2
script = ExtResource("5_aflcu")

[node name="BookmarkList" type="Panel" parent="CanvasLayer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -299.0
offset_top = 84.0
offset_bottom = -84.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("14_itixv")

[node name="BookmarkListButton" type="Button" parent="CanvasLayer/BookmarkList"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -23.23
offset_top = -31.0
offset_right = 0.77
offset_bottom = 32.0
grow_vertical = 2
tooltip_text = "Bookmarks"
text = "<"

[node name="BookmarkScroll" type="ScrollContainer" parent="CanvasLayer/BookmarkList"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="BookmarkItemList" type="ItemList" parent="CanvasLayer/BookmarkList/BookmarkScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MenuBackdrop" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bfjwi")

[node name="RMBMenu" type="ItemList" parent="CanvasLayer/MenuBackdrop"]
layout_mode = 0
offset_right = 227.0
offset_bottom = 249.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/panel = SubResource("StyleBoxFlat_cqoso")
auto_height = true
item_count = 11
item_0/text = "Pin"
item_0/icon = ExtResource("3_5jkwq")
item_1/text = "Connect"
item_2/text = ""
item_2/disabled = true
item_3/text = "Disconnect"
item_4/text = "Delete"
item_5/text = ""
item_5/disabled = true
item_6/text = "Duplicate"
item_7/text = "Create Child"
item_8/text = "Create Sibling"
item_9/text = ""
item_10/text = "Change Colour    >"
script = ExtResource("5_orq2i")

[node name="ColorPickerBackdrop" type="Panel" parent="CanvasLayer/MenuBackdrop"]
visible = false
clip_contents = true
layout_mode = 0
offset_right = 299.0
offset_bottom = 603.0

[node name="ColorPicker" type="ColorPicker" parent="CanvasLayer/MenuBackdrop/ColorPickerBackdrop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 416.0
offset_top = 208.0
offset_right = 165.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
edit_alpha = false
picker_shape = 1
script = ExtResource("6_b3ab8")

[node name="ColorOKButton" type="Button" parent="CanvasLayer/MenuBackdrop/ColorPickerBackdrop/ColorPicker"]
layout_mode = 2
text = "OK"

[node name="DialogBackdrop" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false

[node name="NameSetDialog" type="Window" parent="CanvasLayer/DialogBackdrop"]
title = "Project"
initial_position = 1
size = Vector2i(378, 119)
visible = false
wrap_controls = true
transient = true
exclusive = true
unresizable = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DialogBackdrop/NameSetDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProjectNameLineEdit" type="LineEdit" parent="CanvasLayer/DialogBackdrop/NameSetDialog/VBoxContainer"]
custom_minimum_size = Vector2(0, 47.515)
layout_mode = 2
placeholder_text = "Enter the name of the project"

[node name="NameSetButtonOK" type="Button" parent="CanvasLayer/DialogBackdrop/NameSetDialog/VBoxContainer"]
layout_mode = 2
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("10_wehai")
theme_override_styles/hover = ExtResource("11_2tmou")
text = "OK"

[node name="NameSetButtonCancel" type="Button" parent="CanvasLayer/DialogBackdrop/NameSetDialog/VBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="DialogList" type="VBoxContainer" parent="CanvasLayer/DialogBackdrop"]
visible = false
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -207.0
offset_top = 283.0
offset_right = 207.0
offset_bottom = -283.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CanvasLayer/DialogBackdrop/DialogList"]
layout_mode = 2
size_flags_vertical = 0
text = "Project Name:"

[node name="ProjectNameTextBox" type="LineEdit" parent="CanvasLayer/DialogBackdrop/DialogList"]
layout_mode = 2
mouse_force_pass_scroll_events = false
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_3fss0")
placeholder_text = "ProjectName.mg"
max_length = 64
context_menu_enabled = false
script = ExtResource("7_utv7t")

[node name="DialogButtonOK" type="Button" parent="CanvasLayer/DialogBackdrop/DialogList"]
layout_mode = 2
text = "OK"

[node name="DialogButtonCancel" type="Button" parent="CanvasLayer/DialogBackdrop/DialogList"]
layout_mode = 2
text = "Cancel"

[node name="ProjectListBackground" type="Panel" parent="CanvasLayer/DialogBackdrop"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -292.0
offset_top = 30.0
offset_right = 124.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProjectListContainer" type="ItemList" parent="CanvasLayer/DialogBackdrop/ProjectListBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 11.0
offset_right = -11.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
item_count = 2
item_0/text = "+ New Project!"
item_0/icon = ExtResource("3_5jkwq")
item_1/text = ""
item_1/selectable = false
item_1/disabled = true

[node name="ProjectListButtonCancel" type="Button" parent="CanvasLayer/DialogBackdrop/ProjectListBackground"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = -31.0
offset_right = 208.0
grow_horizontal = 0
grow_vertical = 0
text = "Cancel"

[node name="ProjectListButtonOpenDir" type="Button" parent="CanvasLayer/DialogBackdrop/ProjectListBackground"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = -77.0
offset_right = 208.0
offset_bottom = -46.0
grow_horizontal = 0
grow_vertical = 0
text = "Open Project Directory"

[node name="Bulge" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource("ShaderMaterial_7cwot")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="visibility_changed" from="LinkDrawer" to="LinkDrawerStart" method="_on_link_drawer_visibility_changed"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/ButtonAdd" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/ButtonSave" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/ButtonLoad" to="." method="_on_button_load_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/ButtonAddBookmark" to="." method="_on_button_add_bookmark_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/ButtonReplace" to="." method="_on_button_replace_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/BookmarkList/BookmarkListButton" to="CanvasLayer/BookmarkList" method="_on_bookmark_list_button_pressed"]
[connection signal="item_activated" from="CanvasLayer/BookmarkList/BookmarkScroll/BookmarkItemList" to="." method="_on_bookmark_item_list_item_activated"]
[connection signal="gui_input" from="CanvasLayer/MenuBackdrop" to="." method="_on_menu_backdrop_gui_input"]
[connection signal="item_clicked" from="CanvasLayer/MenuBackdrop/RMBMenu" to="." method="_on_rmb_menu_item_clicked"]
[connection signal="color_changed" from="CanvasLayer/MenuBackdrop/ColorPickerBackdrop/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="text_changed" from="CanvasLayer/DialogBackdrop/DialogList/ProjectNameTextBox" to="CanvasLayer/DialogBackdrop/DialogList/ProjectNameTextBox" method="_on_text_changed"]
[connection signal="pressed" from="CanvasLayer/DialogBackdrop/DialogList/DialogButtonOK" to="." method="_on_dialog_button_ok_pressed"]
[connection signal="pressed" from="CanvasLayer/DialogBackdrop/DialogList/DialogButtonCancel" to="." method="_on_dialog_button_cancel_pressed"]
[connection signal="item_activated" from="CanvasLayer/DialogBackdrop/ProjectListBackground/ProjectListContainer" to="." method="_on_project_list_container_item_activated"]
[connection signal="item_clicked" from="CanvasLayer/DialogBackdrop/ProjectListBackground/ProjectListContainer" to="." method="_on_project_list_container_item_clicked"]
[connection signal="pressed" from="CanvasLayer/DialogBackdrop/ProjectListBackground/ProjectListButtonCancel" to="." method="_on_project_list_button_cancel_pressed"]
[connection signal="pressed" from="CanvasLayer/DialogBackdrop/ProjectListBackground/ProjectListButtonOpenDir" to="." method="_on_project_list_button_open_dir_pressed"]
